# ychr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  cabal.project  ychr.cabal
.github/workflows/: ci.yml  haskell.yml
app/: Main.hs
bench/: Main.hs
dev-docs/: AGENT_DRIVEN_QA.md  BUGS.md  INVARIANTS.md  MICROHS_GAPS.md  PROJECT.md  SCHEME_BACKEND_GAPS.md  STYLE.md  typechecker-constructor-bug.md
docs/: README.md  TypeCheckerArchitecture.md  TypeSystem.md  VM.md  language.md  roadmap.md  type-system.md
docs/explanation/: design-rationale.md  operational-semantics.md  what-is-chr.md
docs/how-to/: add-types.md  call-host-functions.md  organize-modules.md  scheme-repl.md  use-the-repl.md
docs/reference/: cli.md  dsl.md  errors.md  language.md  prelude.md  repl.md  syntax.md  type-system.md  vm.md
docs/tutorials/: 01-getting-started.md  02-chr-primer.md  03-your-first-program.md  04-functions-and-types.md
examples/: bakery.chr  clamp.chr  closures.chr  factorial.chr  fib.chr  leq.chr  traffic.chr
libraries/: builtins.chr  lists.chr  meta.chr  prelude.chr  strings.chr  test.chr
runtime-js/: tests.html
runtime-js/src/: history.js  logic.js  store.js  suspension.js  term.js
runtime-js/tests/: test.logic.js  test.store.js  test.term.js
scheme/: ychr.sls
scheme/test/: run-all.scm  test-history.scm  test-reactivation.scm  test-repl.scm  test-runtime.scm  test-store.scm  test-var.scm
scheme/ychr/: history.scm  history.sld  history.sls  pretty.sls  reactivation.scm  reactivation.sld  reactivation.sls  repl.sls  (+8 more)
scripts/: migrate-golden-layout.sh
test/: Main.hs  conftest.py
typechecker/: typechecker.chr
ychr-compiler/: CHANGELOG.md  LICENSE  cabal.project  ychr-compiler.cabal
ychr-compiler/src/Data/Text/: Show.hs
ychr-compiler/src/YCHR/Compiler/: Compile.hs  Normalize.hs  Parse.hs  Rename.hs
ychr-compiler/src/YCHR/Types/: Common.hs  ConstraintMap.hs  Imp.hs  Normalized.hs  Parsed.hs  Prepared.hs  Renamed.hs  VariableMap.hs
ychr-compiler/test/: Main.hs
ychr-compiler/test/YCHR/Compiler/Normalize/: Tests.hs
ychr-compiler/test/YCHR/Compiler/Parse/: Tests.hs
ychr-compiler/test/YCHR/Compiler/Rename/: Tests.hs
(+1013 files in other folders)
