cabal-version:      3.0
name:               ychr-compiler
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Lorenzo Tabacchini
maintainer:         lortabac@gmx.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Text.Show
                    , YCHR.Compiler.Parse
                    , YCHR.Compiler.Normalize
                    , YCHR.Compiler.Rename
                    , YCHR.Types.Common
                    , YCHR.Types.ConstraintMap
                    , YCHR.Types.Normalized
                    , YCHR.Types.Parsed
                    , YCHR.Types.Prepared
                    , YCHR.Types.Renamed
                    , YCHR.Types.VariableMap
                    , YCHR.Types.Imp
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , containers
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable ychr-compiler
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , ychr-compiler
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-ychr
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    YCHR.Compiler.Rename.Tests
                    , YCHR.Compiler.Parse.Tests
                    , YCHR.Compiler.Normalize.Tests
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , megaparsec
                    , tasty
                    , tasty-hunit
                    , text
                    , ychr-compiler
    hs-source-dirs:   test
    default-language: Haskell2010
